--- a/src/app/main/role/add-role/add-role.component.html
+++ b/src/app/main/role/add-role/add-role.component.html
@@ -8,8 +8,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="label text-color">{{'role.name' | translate}} <span class="required-title">*</span></div>
-                        <div class="input-data">
-                            <input type="text" formControlName="name" autofocus>
+                        <div class="input-data" [ngClass]="{'hidden-color' : this.data.id != null}">
+                            <input type="text" formControlName="name" autofocus [readonly]="this.data.id != null" [ngClass]="{'hidden-color' : this.data.id != null}">
                         </div>
                         <div *ngIf="submitted && f.name.errors" class="invalid">
                             <div *ngIf="f.name.errors.required">{{'error.role.name.required' | translate}}</div>
@@ -19,8 +19,8 @@
                 <div class="row" style="padding-top: 10px;">
                     <div class="col-md-12">
                         <div class="label text-color">{{'role.code' | translate}} <span class="required-title">*</span></div>
-                        <div class="input-data">
-                            <input type="text" formControlName="code" autofocus>
+                        <div class="input-data" [ngClass]="{'hidden-color' : this.data.id != null}">
+                            <input type="text" formControlName="code" autofocus [readonly]="this.data.id != null" [ngClass]="{'hidden-color' : this.data.id != null}">
                         </div>
                         <div *ngIf="submitted && f.code.errors" class="invalid">
                             <div *ngIf="f.code.errors.required">{{'error.role.code.required' | translate}}</div>
