--- a/src/app/main/contract/dialog/filter-list-dialog/filter-list-dialog.component.html
+++ b/src/app/main/contract/dialog/filter-list-dialog/filter-list-dialog.component.html
@@ -48,7 +48,7 @@
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">Hủy</button>
-            <button class="save-button" (click)="onSubmit()">Lưu lại</button>
+            <button class="save-button" (click)="onSubmit()">Tìm kiếm</button>
         </div>
     </form>
   </div>
