--- a/src/app/main/contract/detail-contract/detail-contract.component.scss
+++ b/src/app/main/contract/detail-contract/detail-contract.component.scss
@@ -299,6 +299,7 @@
   display: flex;
   align-items: center;
   height: 46px;
+  float: right;
   .content_footer {
     color:#0160AE;
     font-size: 13px;
