--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -51,25 +51,7 @@
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
                 <div class="label text-color">{{'unit.parent' | translate }} <span class="required-title">*</span></div>
-                <div [ngClass]="{'input-data hidden-color' : this.data.id != null}">
-                    <p-dropdown *ngIf="!this.data.id"
-                        panelStyleClass="font"
-                        appendTo="body"
-                        [options]="orgList" 
-                        formControlName="parent_id" 
-                        optionLabel="name" 
-                        optionValue="id" 
-                        placeholder="Chọn tổ chức" 
-                        [filter]="true" 
-                        filterBy="name" 
-                        [showClear]="true"  
-                        [showClear]="this.data.id != null?false:true"
-                        [readonly]="this.data.id != null" 
-                        dropdownIcon="pi pi-chevron-down" 
-                    ></p-dropdown>
-                    <input *ngIf="this.data.id" type="text" formControlName="parentName" [readonly]="true" class="hidden-color">
-                </div>
-                <!-- <div>
+                <div *ngIf="this.data.id==null">
                     <p-dropdown
                         panelStyleClass="font"
                         appendTo="body"
@@ -84,7 +66,10 @@
                         [showClear]="true"
                         dropdownIcon="pi pi-chevron-down" 
                     ></p-dropdown>
-                </div> -->
+                </div>
+                <div *ngIf="this.data.id != null" class="input-data hidden-color">
+                    <div formControlName="parent_id" class="hidden-color">{{addForm.controls.parentName.value}}</div>
+                  </div>
                 <div *ngIf="submitted && f.parent_id.errors" class="invalid">
                     <div *ngIf="f.parent_id.errors.required">Tổ chức cấp trên không được để trống</div>
                 </div>
