--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -14,12 +14,12 @@
         </div>
         <div class="col-md-4">
             <div class="label text-color">{{'user.email' | translate}} <span class="required-title">*</span></div>
-            <div class="input-data" [ngClass]="{'hidden-color' : id != null}">
-                <input type="text" formControlName="email" [readonly]="id != null" [ngClass]="{'hidden-color' : id != null}">
+            <div *ngIf="id == null" class="input-data">
+                <input type="text" formControlName="email">
             </div>
-            <!-- <div class="input-data" [ngClass]="{'hidden-color' : id != null}">
-              <div formControlName="email" [ngClass]="{'hidden-color' : id != null}"></div>
-            </div> -->
+            <div *ngIf="id != null" class="input-data hidden-color">
+              <div formControlName="email" class="hidden-color">{{addForm.controls.email.value}}</div>
+            </div>
             <div *ngIf="submitted && f.email.errors" class="invalid">
               <div *ngIf="f.email.errors.required">Email không được để trống</div>
               <div *ngIf="f.email.errors.email">Email không đúng định dạng</div>
@@ -46,8 +46,8 @@
         </div>
         <div class="col-md-4">
           <div class="label text-color">{{'organization' | translate}} <span class="required-title">*</span></div>
-          <div [ngClass]="{'input-data hidden-color' : id != null}">
-            <p-dropdown *ngIf="!id"
+          <div *ngIf="id == null">
+            <p-dropdown
               panelStyleClass="font"
               [options]="orgList" 
               formControlName="organizationId" 
@@ -58,7 +58,9 @@
               filterBy="name" 
               [showClear]="true"
               ></p-dropdown>
-              <input *ngIf="id" type="text" formControlName="organizationName" [readonly]="true" class="hidden-color">
+          </div>
+          <div *ngIf="id != null" class="input-data hidden-color">
+            <div formControlName="organizationId" class="hidden-color">{{addForm.controls.organizationName.value}}</div>
           </div>
             <div *ngIf="submitted && f.organizationId.errors" class="invalid">
               <div *ngIf="f.organizationId.errors.required">Tổ chức không được để trống</div>
