--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -60,7 +60,7 @@
               ></p-dropdown>
           </div>
           <div *ngIf="id != null" class="input-data hidden-color">
-            <div formControlName="organizationId" class="hidden-color">{{addForm.controls.organizationName.value}}</div>
+            <div class="hidden-color">{{addForm.controls.organizationName.value}}</div>
           </div>
             <div *ngIf="submitted && f.organizationId.errors" class="invalid">
               <div *ngIf="f.organizationId.errors.required">Tổ chức không được để trống</div>
