--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -68,8 +68,8 @@
         </div>
         <div class="col-md-4">
           <div class="label text-color">{{'menu.role.list' | translate}} <span class="required-title">*</span></div>
-          <div [ngClass]="{'input-data hidden-color' : !isEditRole}">
-            <p-dropdown *ngIf="isEditRole"
+          <div *ngIf="isEditRole">
+            <p-dropdown
               panelStyleClass="font"
               [options]="roleList" 
               formControlName="role" 
@@ -80,7 +80,9 @@
               filterBy="name" 
               [showClear]="true"  
               ></p-dropdown>
-            <input *ngIf="!isEditRole" type="text" formControlName="roleName" [readonly]="true" class="hidden-color">
+          </div>
+          <div *ngIf="!isEditRole" class="input-data hidden-color">
+            <div class="hidden-color">{{addForm.controls.roleName.value}}</div>
           </div>
           <div *ngIf="submitted && f.role.errors" class="invalid">
             <div *ngIf="f.role.errors.required">Vai trò không được để trống</div>
