--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -78,10 +78,14 @@
        </div>
    
        <div class="col-md-4">
-         <div class="label-header">
-           {{'sign.kpi' | translate}}
-         </div>
-         <div class="content-body">
+        <div class="label-header">
+          <div class="row" style="padding: 0 10px;">
+            <div class="col-md-12">
+              {{'sign.kpi' | translate}}
+            </div>
+          </div>
+        </div>
+         <div>
            <div class="row">
              <div class="col-md-12">
                <div>{{'user.phone' | translate}}</div>
@@ -102,10 +106,14 @@
        </div>
    
        <div class="col-md-4">
-         <div class="label-header">
-           {{'sign.hsm' | translate}}
-         </div>
-         <div class="content-body">
+        <div class="label-header">
+          <div class="row" style="padding: 0 10px;">
+            <div class="col-md-12">
+              {{'sign.hsm' | translate}}
+            </div>
+          </div>
+        </div>
+         <div>
            <div class="row">
              <div class="col-md-12">
                <div>{{'user.name.v2' | translate}}</div>
