--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -43,20 +43,7 @@
       <div class="col-md-4">
         <div class="label text-color">{{'organization' | translate}} <span class="required-title">*</span></div>
         <div class="input-data hidden-color">
-          <input type="text" formControlName="organizationName" [readonly]="true" class="hidden-color">
-        <!-- <p-dropdown 
-          panelStyleClass="font"
-          class="hidden-color"
-          [options]="orgList" 
-          formControlName="organizationId" 
-          optionLabel="name" 
-          optionValue="id" 
-          placeholder="Chọn tổ chức" 
-          [filter]="true" 
-          filterBy="name" 
-          [showClear]="false"
-          [readonly]="true"
-          ></p-dropdown> -->
+          <div class="hidden-color">{{addInforForm.controls.organizationName.value}}</div>
         </div>
         <div *ngIf="submitted && f.organizationId.errors" class="invalid">
           <div *ngIf="f.organizationId.errors.required">Tổ chức không được để trống</div>
@@ -65,25 +52,14 @@
       <div class="col-md-4">
       <div class="label text-color">{{'menu.role.list' | translate}} <span class="required-title">*</span></div>
       <div class="input-data hidden-color">
-        <input type="text" formControlName="roleName" [readonly]="true" class="hidden-color">
-        <!-- <p-dropdown 
-        panelStyleClass="font"
-        [options]="roleList" 
-        formControlName="role" 
-        optionLabel="name" 
-        optionValue="id" 
-        placeholder="Chọn vai trò" 
-        [filter]="true" 
-        filterBy="name" 
-        [readonly]="true"
-        ></p-dropdown> -->
+        <div class="hidden-color">{{addInforForm.controls.roleName.value}}</div>
       </div>
       <div *ngIf="submitted && f.role.errors" class="invalid">
         <div *ngIf="f.role.errors.required">Vai trò không được để trống</div>
       </div>
     </div>
     </div>
-    <div class="row" style="justify-content: center;padding-top: 10px;">
+    <!-- <div class="row" style="justify-content: center;padding-top: 10px;">
       <div class="col-md-2" style="text-align: center;">
         <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
         <span> {{'unit.active' | translate}}</span>
@@ -92,7 +68,7 @@
         <input type="radio" name='confirm-radio-consider' [value]="0" formControlName="status" name="status">
         <span> {{'unit.inactive' | translate}}</span>
       </div>
-    </div>
+    </div> -->
     <div class="row" style="justify-content: center;padding-top: 0px;">
       <button class="save-button" (click)="updateUser()">{{'btn.update' | translate}}</button>
     </div>
@@ -131,9 +107,13 @@
       <div class="col-md-4">
       <form [formGroup]="addKpiForm">
         <div class="label-header">
-          {{'sign.kpi' | translate}}
+          <div class="row" style="padding: 0 10px;">
+            <div class="col-md-12">
+              {{'sign.kpi' | translate}}
+            </div>
+          </div>
         </div>
-        <div class="content-body">
+        <div>
           <div class="row">
             <div class="col-md-12">
               <div>{{'user.phone' | translate}}</div>
@@ -170,9 +150,13 @@
       <div class="col-md-4">
       <form [formGroup]="addHsmForm">
         <div class="label-header">
-          {{'sign.hsm' | translate}}
+          <div class="row" style="padding: 0 10px;">
+            <div class="col-md-12">
+              {{'sign.hsm' | translate}}
+            </div>
+          </div>
         </div>
-        <div class="content-body">
+        <div>
           <div class="row">
             <div class="col-md-12">
               <div>{{'user.name.v2' | translate}}</div>
