--- a/src/app/main/user/infor-user/infor-user.component.scss
+++ b/src/app/main/user/infor-user/infor-user.component.scss
@@ -5,15 +5,19 @@
 .input-data {
   border: 1px solid #106DB6;
   border-radius: 5px;
-  height: 33px;
+  min-height: 33px;
   display: flex;
   align-items: center;
 
-  > input {
+  > input, div {
       border: none;
       outline: none;
       padding-left: 15px;
       width: 100%;
+      border-radius: 5px;
+  }
+  > div{
+    padding: 5px 15px;
   }
 } 
 :host ::ng-deep {
