--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -18,7 +18,7 @@
                 <input type="text" formControlName="email">
             </div>
             <div *ngIf="id != null" class="input-data hidden-color">
-              <div formControlName="email" class="hidden-color">{{addForm.controls.email.value}}</div>
+              <input type="text" formControlName="email" readonly class="hidden-color">
             </div>
             <div *ngIf="submitted && f.email.errors" class="invalid">
               <div *ngIf="f.email.errors.required">Email không được để trống</div>
@@ -60,7 +60,7 @@
               ></p-dropdown>
           </div>
           <div *ngIf="id != null" class="input-data hidden-color">
-            <div class="hidden-color">{{addForm.controls.organizationName.value}}</div>
+            <div class="hidden-color">{{organizationName}}</div>
           </div>
             <div *ngIf="submitted && f.organizationId.errors" class="invalid">
               <div *ngIf="f.organizationId.errors.required">Tổ chức không được để trống</div>
@@ -82,7 +82,7 @@
               ></p-dropdown>
           </div>
           <div *ngIf="!isEditRole" class="input-data hidden-color">
-            <div class="hidden-color">{{addForm.controls.roleName.value}}</div>
+            <div class="hidden-color">{{roleName}}</div>
           </div>
           <div *ngIf="submitted && f.role.errors" class="invalid">
             <div *ngIf="f.role.errors.required">Vai trò không được để trống</div>
