--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -43,7 +43,7 @@
       <div class="col-md-4">
         <div class="label text-color">{{'organization' | translate}} <span class="required-title">*</span></div>
         <div class="input-data hidden-color">
-          <div class="hidden-color">{{addInforForm.controls.organizationName.value}}</div>
+          <div class="hidden-color">{{organizationName}}</div>
         </div>
         <div *ngIf="submitted && f.organizationId.errors" class="invalid">
           <div *ngIf="f.organizationId.errors.required">Tổ chức không được để trống</div>
@@ -52,7 +52,7 @@
       <div class="col-md-4">
       <div class="label text-color">{{'menu.role.list' | translate}} <span class="required-title">*</span></div>
       <div class="input-data hidden-color">
-        <div class="hidden-color">{{addInforForm.controls.roleName.value}}</div>
+        <div class="hidden-color">{{roleName}}</div>
       </div>
       <div *ngIf="submitted && f.role.errors" class="invalid">
         <div *ngIf="f.role.errors.required">Vai trò không được để trống</div>
