--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
@@ -76,13 +76,16 @@ input[type="file"] {
         border-radius: 5px;
         border: 1px solid #106DB6;
         padding: 7px 10px;
-        cursor: pointer;
+        //cursor: pointer;
       }
-      img {
+      >img {
         cursor: pointer;
         position: absolute;
         top: 10px;
         right: 25px;
+      }
+      >img:hover{
+        cursor: pointer;
       }
     }
   }
