--- a/src/app/main/notification/notification.component.html
+++ b/src/app/main/notification/notification.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" style="padding-top: 10px;">
   
     <div *ngIf="listNotification.length > 0"> 
-        <div *ngFor="let item of listNotification| paginate:{itemsPerPage: page, currentPage:p}; let i = index" style="padding: 4px;"
+        <div *ngFor="let item of listNotification| paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}" style="padding: 4px;"
         [style.background-color]="item.status==0 ? '#eaf4ff' : ''" class="item_contract">
           <div class="row">
             <div class="col-md-12 item_contract_name" (click)="openLinkNotification(item.notice_url, item.id)">{{item.notice_name}}</div>
@@ -9,7 +9,7 @@
           <div class="row" *ngFor="let s of item.notice_content.split('<br/>')">
             <div class="col-md-12 item_contract_infor">
               <img src="../../../assets/img/user_icon.svg" width="12px"/>
-              <span> {{s}}</span>
+              <span> {{s}}</span> 
             </div>
           </div>
           <div class="row item_contract_infor">
@@ -20,13 +20,15 @@
             </div>
             
             <div class="col-md-6 item_contract_infor">{{'contract.status' | translate}}:
-              <span class="status_blue" *ngIf="item.message_code=='sign_flow_coordinator'">Điều phối</span>
-              <span class="status_blue" *ngIf="item.message_code=='sign_flow_reject'">Từ chối</span>
-              <span class="status_blue" *ngIf="item.message_code=='sign_flow_review'">Xem xét</span>
-              <span class="status_blue" *ngIf="item.message_code=='sign_flow_sign'">Ký</span>
-              <span class="status_blue" *ngIf="item.message_code=='sign_flow_publish'">Ban hành</span>
-              <span class="status_blue" *ngIf="item.message_code=='sign_flow_finish'">Hoàn thành</span>
-              <span class="status_blue" *ngIf="item.message_code=='sign_flow_cancel'">Hủy</span>
+              <span class="status_blue" *ngIf="item.message_code=='sign_flow_coordinator'">{{'contract.lead' | translate}}</span>
+              <span class="status_blue" *ngIf="item.message_code=='sign_flow_reject'">{{'contract.status.fail' | translate}}</span>
+              <span class="status_blue" *ngIf="item.message_code=='sign_flow_review'">{{'contract.view' | translate}}</span>
+              <span class="status_blue" *ngIf="item.message_code=='sign_flow_sign'">{{'contract.sign' | translate}}</span>
+              <span class="status_blue" *ngIf="item.message_code=='sign_flow_publish'">{{'contract.document' | translate}}</span>
+              <span class="status_blue" *ngIf="item.message_code=='sign_flow_finish'">{{'contract.status.complete' | translate}}</span>
+              <span class="status_blue" *ngIf="item.message_code=='sign_flow_cancel'">{{'contract.status.cancel' | translate}}</span>
+              <span class="status_blue" *ngIf="item.message_code=='contract_exprire'">{{'contract.status.overdue' | translate}}</span>
+              <span class="status_blue" *ngIf="item.message_code=='contract_about_exprire'">{{'contract.status.expire' | translate}}</span>
             </div>
         
           </div>
@@ -44,7 +46,7 @@
     <div class="contract_footer">
       <div class="footer_title"></div>
       <div class="footer_pagination">
-        <pagination-controls *ngIf="listNotification.length > 0;" (pageChange)="p=$event; setPage()" previousLabel="" nextLabel=""></pagination-controls>
+        <pagination-controls *ngIf="listNotification.length > 0;" (pageChange)="p=$event; getNotification()" previousLabel="" nextLabel=""></pagination-controls>
       </div>
       <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}</div>
     </div>
