--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -18,7 +18,8 @@
         </div>
         <div>
           <span class="title-contract">File đính kèm:</span>
-          <span *ngFor="let d of allFileAttachment">
+          <span *ngFor="let d of allFileAttachment;let i = index">
+            <span *ngIf="i != 0">, </span>
             <a style="color: #106DB6" rel="stylesheet" [href]="d.path" target="_blank">{{d.filename}}</a>
           </span>
         </div>
@@ -26,7 +27,8 @@
           <span class="title-contract">Hợp đồng liên quan:
           </span>
           <span *ngFor="let d of datas?.is_data_contract?.refs;let i = index">
-            <a style="color: #106DB6;" [style.margin-left]="i != 0 ? '8px' : ''" rel="stylesheet" [href]="'/main/form-contract/detail/' + d.ref_id" target="_blank">{{d.ref_name}}</a>
+            <span *ngIf="i != 0">, </span>
+            <a style="color: #106DB6;" rel="stylesheet" [href]="'/main/form-contract/detail/' + d.ref_id" target="_blank">{{d.ref_name}}</a>
           </span>
         </div>
 
