--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="col-md-6 btn_search">
       <button class="btn btn-lg btn-block btn_submit">{{'btn.search' | translate }}</button>
-      <button class="btn btn-lg btn-block btn_submit">{{'btn.add' | translate }}</button>
+      <button class="btn btn-lg btn-block btn_submit" (click)="add()">{{'btn.add' | translate }}</button>
     </div>
   </div>
 
