--- a/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
@@ -1,1 +1,165 @@
-<p>infor-contract works!</p>
+<!-- form step 1 -->
+<div>
+    <!-- <div class="row">
+      <div class="radio col-md-4 label_type">
+        <label><input type="radio" name="type" checked (change)="changeAddContract('/main/form-contract/add')"> {{'contract.not-by-template' | translate}}</label>
+      </div>
+      <div class="radio col-md-4 label_type">
+        <label><input type="radio" name="type" (change)="changeAddContract('/main/form-contract-batch/add')"> {{'contract.by-template' | translate}}</label>
+      </div>
+      <div class="radio col-md-4 label_type">
+        <label><input type="radio" name="type" (change)="changeAddContract('/main/form-contract-batch/add')"> {{'contract.by-batch' | translate}}</label>
+      </div>
+    </div> -->
+  
+    <div class="row">
+      <div class="col-md-12">
+        <div class="form-group">
+          <div class="label_item">{{'contract.name' | translate}} <span class="require_star">*</span></div>
+          <div class="input-group">
+            <input #nameContract type="text" [(ngModel)]="name" class="input_text" (keyup)="contractNameRequired(); contractNameCounter()"/>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="invalid" *ngIf="errorContractName!=''">
+            {{errorContractName | translate}}
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-md-12">
+        <div class="form-group">
+          <div class="label_item">{{'contract.file' | translate}} <span class="require_star">*</span></div>
+          <input id="file-input" type="file" accept=".pdf" (change)="fileChanged($event)" style="display: none;"/>
+          <div class="file-contract" (click)="addFile()">
+            <img src="assets/img/upload_file.svg" alt="mobifone.contract">
+            <div style="padding-top: 7px;"><span style="color: #798693;" *ngIf="this.datas.file_name==null">{{'choose.contract.file' | translate }}</span>{{this.datas.file_name}}</div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="invalid" *ngIf="errorContractFile!=''">
+            {{errorContractFile | translate}}
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-md-5">
+        <div class="form-group">
+          <div class="label_item">{{'contract.number' | translate}}</div>
+          <div class="input-group">
+            <input type="text" [(ngModel)]="code" class="input_text" (keyup)="contractNumberValid()"/>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="invalid" *ngIf="errorContractNumber!=''">
+            {{errorContractNumber | translate}}
+          </div>
+        </div>
+      </div>
+  
+      <div class="col-md-2"></div>
+      <div class="col-md-5">
+        <div class="form-group">
+          <div class="label_item">{{'contract.type' | translate}}</div>
+          <div>
+            <p-dropdown
+              panelStyleClass="font"
+              [options]="typeList"
+              [(ngModel)]="type_id"
+              optionLabel="name"
+              optionValue="id"
+              placeholder="Chọn loại hợp đồng"
+              [filter]="true"
+              filterBy="name"
+              [showClear]="true"
+              ></p-dropdown>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-md-5">
+        <div class="form-group">
+          <div class="label_item">{{'contract.connect' | translate}}</div>
+          <div>
+            <!-- <ng-multiselect-dropdown id="contractConnect" [(ngModel)]="contractConnect" placeholder="{{'choose' | translate }}"
+              [settings]="dropdownConnectSettings" [data]="contractConnectList">
+              <ng-template #optionsTemplate let-item let-option="option"
+                let-id="id" let-isSelected="isSelected">
+                <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
+                  <label style="color: #333; font-weight: normal;"
+                    [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractConnectItems[id].isDisabled? 'lightgrey': ''}">
+                    {{getContractConnectItems[id].name}}
+                  </label>
+                </div>
+              </ng-template>
+            </ng-multiselect-dropdown> -->
+            <p-multiSelect styleClass="font" [options]="contractConnectList" [(ngModel)]="contractConnect" optionLabel="name" optionValue="id" display="chip" placeholder="Chọn hợp đồng" (onChange)="onChange($event)"></p-multiSelect>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+      <div class="col-md-5">
+        <div class="form-group">
+          <div class="select-file-contract">
+            <div class="file-approve">
+              <div class="label_item">{{'file.attach' | translate}}</div>
+              <input id="attachFile" type="file" accept=".pdf, .doc, .docx"
+                    (change)="fileChangedAttach($event)" style="display: none;" multiple/>
+              <div class="select-contract" >
+                <div class="div_file_attach">
+                  <div *ngIf="this.attachFileNameArr.length == 0" style="color:gray">{{'choose.contract.file.attach' | translate }}</div>
+                  <div *ngFor="let item of this.datas.attachFileNameArr" style="width: 80%;">{{item}} <img *ngIf="item" style="cursor: pointer;" (click)="deleteFileAttach(item)" src="../../../../../../assets/img/icon_close.svg"></div>
+                </div>
+                <img src="assets/img/attachment.svg" alt="mobifone.contract" (click)="addFileAttach()">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-md-5">
+        <div class="form-group">
+          <div class="label_item">{{'note' | translate}}</div>
+          <div class="input-group">
+            <input type="text" [(ngModel)]="notes" class="input_text"/>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+      <div class="col-md-5">
+        <div class="form-group">
+          <div class="label_item">{{'expiration-date' | translate}} <span class="require_star">*</span></div>
+          <div>
+            <p-calendar [(ngModel)]="sign_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true" dateFormat="dd/mm/yy"></p-calendar>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="invalid" *ngIf="errorSignTime!=''">
+            {{errorSignTime}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="footer-infor-contract">
+      <button (click)="saveDraft()" type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate }}</button>
+      <button (click)="next()" type="button" name="next" class="next action-button pull-right">{{'btn.next' | translate }}</button>
+  </div>
+  
+  <ngx-spinner
+    bdColor="rgba(51,51,51,0.8)"
+    size="medium"
+    color="#fff"
+    type="ball-spin-clockwise">
+    <p style="font-size: 18px; color: white">Đang xử lý...</p>
+  </ngx-spinner>
+  
