--- a/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -1,12 +1,12 @@
 <!-- form step 4 -->
-<div class="labelOrg">HỢP ĐỒNG</div>
+<div class="labelOrg" style="text-transform: uppercase;">{{'contract-template' | translate}}</div>
 <div class="infor_contact">
     <div class="row">
         <div class="col-md-5">
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <div class="label_item">Tên file hợp đồng</div>
+                        <div class="label_item">{{'contract-template.name' | translate}}</div>
                         <div>
                             <div [innerHTML]="contractFileName" class="input_text"></div>
                         </div>
@@ -16,7 +16,17 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <div class="label_item">Ngày hết hạn ký</div>
+                        <div class="label_item">{{'contract-template.file' | translate}}</div>
+                        <div>
+                            <div [innerHTML]="dateDeadline" class="input_text"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <div class="label_item">{{'effective-date' | translate}}</div>
                         <div>
                             <div [innerHTML]="dateDeadline" class="input_text"></div>
                         </div>
@@ -26,10 +36,24 @@
         </div>
         <div class="col-md-2"></div>
         <div class="col-md-5">
-            <div class="form-group">
-                <div class="label_item">Lời nhắn</div>
-                <div>
-                    <div [innerHTML]="comment" class="input_text"></div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <div class="label_item">{{'contract-template.code' | translate}}</div>
+                        <div>
+                            <div [innerHTML]="contractFileName" class="input_text"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <div class="label_item">{{'contract-template.type' | translate}}</div>
+                        <div>
+                            <div [innerHTML]="contractFileName" class="input_text"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -125,7 +149,6 @@
     </div>
     <div class="content_footer"></div>
     <div>
-        <!-- <button type="button" name="next" class="next draft-button">Lưu nháp</button> -->
         <button (click)="next()" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
     </div>
 </div>
