compare start date and end date

--- a/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -1,5 +1,5 @@
 <!-- form step 4 -->
-<div class="labelOrg" style="text-transform: uppercase;">{{'contract-template' | translate}}</div>
+<div class="labelOrg">{{'contract-template' | translate}}</div>
 <div class="infor_contact">
     <div class="row">
         <div class="col-md-5">
@@ -18,7 +18,7 @@
                     <div class="form-group">
                         <div class="label_item">{{'contract-template.file' | translate}}</div>
                         <div>
-                            <div [innerHTML]="dateDeadline" class="input_text"></div>
+                            <div [innerHTML]="startTime" class="input_text"></div>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                     <div class="form-group">
                         <div class="label_item">{{'effective-date' | translate}}</div>
                         <div>
-                            <div [innerHTML]="dateDeadline" class="input_text"></div>
+                            <div [innerHTML]="startTime" class="input_text"></div>
                         </div>
                     </div>
                 </div>
@@ -60,15 +60,15 @@
     </div>
 </div>
 
-<div class="labelOrg">CÁC BÊN KÝ</div>
+<div class="labelOrg">{{'side.sign' | translate}}</div>
 <div class="determine_contact">
     <div class="user_contact">
-        <div class="label">TỔ CHỨC CỦA TÔI</div>
+        <div class="label">{{'organization.me'  | translate}}</div>
         <div class="content_determine">
             <div class="row">
                 <div class="col-md-5">
                     <div class="form-group">
-                        <div class="label_item">Người xem xét</div>
+                        <div class="label_item">{{'user.view' | translate}}</div>
                         <div>
                             <div [innerHTML]="userViews" class="input_text"></div>
                         </div>
@@ -77,7 +77,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-5">
                     <div class="form-group">
-                        <div class="label_item">Người ký</div>
+                        <div class="label_item">{{'user.sign' | translate}}</div>
                         <div>
                             <div [innerHTML]="userSigns" class="input_text"></div>
                         </div>
@@ -88,7 +88,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <div class="form-group">
-                        <div class="label_item">Văn thư</div>
+                        <div class="label_item">{{'user.doc' | translate}}</div>
                         <div>
                             <div [innerHTML]="userDocs" class="input_text"></div>
                         </div>
@@ -99,12 +99,12 @@
     </div>
 
     <div class="partner_contact">
-        <div class="label">ĐỐI TÁC</div>
+        <div class="label">{{'organization.partner'  | translate}}</div>
         <div class="content_determine">
             <div class="row" *ngIf="isOrg">
                 <div class="col-md-5">
                     <div class="form-group">
-                        <div class="label_item">Người điều phối</div>
+                        <div class="label_item">{{'user.lead' | translate}}</div>
                         <div>
                             <div [innerHTML]="partnerLeads" class="input_text"></div>
                         </div>
@@ -113,7 +113,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-5">
                     <div class="form-group">
-                        <div class="label_item">Người xem xét</div>
+                        <div class="label_item">{{'user.view' | translate}}</div>
                         <div>
                             <div [innerHTML]="partnerViews" class="input_text"></div>
                         </div>
@@ -124,7 +124,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <div class="form-group">
-                        <div class="label_item">Người ký</div>
+                        <div class="label_item">{{'user.sign' | translate}}</div>
                         <div>
                             <div [innerHTML]="partnerSigns" class="input_text"></div>
                         </div>
@@ -133,7 +133,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-5" *ngIf="isOrg">
                     <div class="form-group">
-                        <div class="label_item">Văn thư</div>
+                        <div class="label_item">{{'user.doc' | translate}}</div>
                         <div>
                             <div [innerHTML]="partnerDocs" class="input_text"></div>
                         </div>
@@ -145,10 +145,10 @@
 </div>
 <div class="footer-infor-contract">
     <div style="width: 200px;">
-        <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+        <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">{{'btn.previous' | translate}}</button>
     </div>
     <div class="content_footer"></div>
     <div>
-        <button (click)="next()" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
+        <button (click)="next()" type="button" name="next" class="next action-button pull-right">{{'btn.done' | translate}}</button>
     </div>
 </div>
