--- a/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
@@ -31,6 +31,7 @@
   .labelOrg {
     padding: 10px 0px 5px;
     font-weight: 500;
+    text-transform: uppercase;
   }
   
   .content_footer {
@@ -106,6 +107,7 @@
     display: flex;
     align-items: center;
     padding-left: 16px;
+    text-transform: uppercase;
   }
   .content_determine{
     padding: 10px;
