--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -125,7 +125,7 @@
     </div>
     <div class="content_footer"></div>
     <div>
-        <!-- <button type="button" name="next" class="next draft-button">Lưu nháp</button> -->
+        <button type="button" name="next" class="next draft-button" (click)="saveDraft()">Lưu nháp</button>
         <button (click)="next()" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
     </div>
 </div>
