--- a/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
@@ -103,7 +103,7 @@
             </div>
             <div class="form-group">
               <div class="invalid" *ngIf="errorStartTime!=''">
-                {{errorStartTime}}
+                {{errorStartTime | translate}}
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@
             </div>
             <div class="form-group">
               <div class="invalid" *ngIf="errorEndTime!=''">
-                {{errorEndTime}}
+                {{errorEndTime | translate}}
               </div>
             </div>
           </div>
